# WASMDynamicLinking

./: .gitignore  CmakeGenerateAndBuild.sh  CompileToWasm.sh  README.md
Src/: CMakeLists.txt  calc.cpp  calc.h  main.cpp
